<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:clickable="true"
                android:onClick="humpty"
                card_view:cardBackgroundColor="#009900"
                card_view:cardCornerRadius="30dp"
                card_view:cardElevation="30dp"
                card_view:contentPadding="20dp">

                <TextView
                    android:id="@+id/text_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:text="@string/t1"
                    android:textSize="20dp">

                </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:clickable="true"
                android:onClick="baa"
                card_view:cardBackgroundColor="#009900"
                card_view:cardCornerRadius="30dp"
                card_view:cardElevation="30dp"
                card_view:contentPadding="20dp"

                >

                <TextView
                    android:id="@+id/text_home1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:text="@string/t2"
                    android:textSize="20sp">

                </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:clickable="true"
                android:onClick="twinkle"
                card_view:cardBackgroundColor="#009900"
                card_view:cardCornerRadius="30dp"
                card_view:cardElevation="30dp"
                card_view:contentPadding="20dp"

                >

                <TextView
                    android:id="@+id/text_home2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:text="@string/t3"
                    android:textSize="20sp">

                </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:clickable="true"
                android:onClick="rain"
                card_view:cardBackgroundColor="#009900"
                card_view:cardCornerRadius="30dp"
                card_view:cardElevation="30dp"
                card_view:contentPadding="20dp"

                >

                <TextView
                    android:id="@+id/text_home3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:text="@string/t4"
                    android:textSize="20sp">

                </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:clickable="true"
                android:onClick="five"
                card_view:cardBackgroundColor="#009900"
                card_view:cardCornerRadius="30dp"
                card_view:cardElevation="30dp"
                card_view:contentPadding="20dp"

                >

                <TextView
                    android:id="@+id/text_home4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:text="@string/t5"
                    android:textSize="20sp">

                </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:clickable="true"
                android:onClick="mary"
                card_view:cardBackgroundColor="#009900"
                card_view:cardCornerRadius="30dp"
                card_view:cardElevation="30dp"
                card_view:contentPadding="20dp"

                >

                <TextView
                    android:id="@+id/text_home5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:text="@string/t6"
                    android:textSize="20sp">

                </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:clickable="true"
                android:onClick="ltsy"
                card_view:cardBackgroundColor="#009900"
                card_view:cardCornerRadius="30dp"
                card_view:cardElevation="30dp"
                card_view:contentPadding="20dp"

                >

                <TextView
                    android:id="@+id/text_home6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:text="@string/t7"
                    android:textSize="20sp">

                </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:clickable="true"
                android:onClick="hickory"
                card_view:cardBackgroundColor="#009900"
                card_view:cardCornerRadius="30dp"
                card_view:cardElevation="30dp"
                card_view:contentPadding="20dp"

                >

                <TextView
                    android:id="@+id/text_home7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/t8"
                    android:textColor="#fff"
                    android:textSize="20sp">

                </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:clickable="true"
                android:onClick="love"
                card_view:cardBackgroundColor="#009900 "
                card_view:cardCornerRadius="30dp"
                card_view:cardElevation="30dp"
                card_view:contentPadding="20dp"

                >

                <TextView
                    android:id="@+id/text_home8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:text="@string/t9"
                    android:textSize="20sp">

                </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:clickable="true"
                android:onClick="johny"
                card_view:cardBackgroundColor="#009900"
                card_view:cardCornerRadius="30dp"
                card_view:cardElevation="30dp"
                card_view:contentPadding="20dp"

                >

                <TextView
                    android:id="@+id/text_home9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:text="@string/t10"
                    android:textSize="20sp">

                </TextView>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>


</LinearLayout>